original/n_admix_10_15624445.out
  File "n_admix_10.py", line 77
    cur_win = 1
    ^
IndentationError: unexpected indent
srun: error: bhpc-c5-u31-2: task 0: Exited with exit code 1
Execution time was 1 seconds.
